--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Indie+Flower" rel="stylesheet">
-    <script src="myJS.js"></script>
     <title>Dashboard</title>
 </head>
-<body>
+<body onload="getLocation()">
     <header>
         <h1 id="header"><span id="dateTime"></span></h1>
     </header>
 
     <ul>
         <li><a href="accountSettings.html">Account Settings</a></li>
+        <li><a id="location" href="#">Location</a></li>
     </ul>
 
-    <a id="twitter" class="twitter-timeline" href="https://twitter.com/TwitterDev" data-width="30%" data-height="500" data-chrome="nofooter"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a id="twitter" class="twitter-timeline" href="https://twitter.com/TwitterDev" data-width="30%" data-height="500" data-chrome="nofooter"></a>
+
     <script>
-        document.getElementById("twitter").href = "https://twitter.com/" + localStorage.getItem("twitterSettings");
+        if(localStorage.getItem("twitterSettings") === null){
+            localStorage.setItem("twitterSettings", "twitterDev");
+        } else {
+            document.getElementById("twitter").href = "https://twitter.com/" + localStorage.getItem("twitterSettings");
+        }
     </script>
+
+    <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD20hEhOFvacycdb9UGlDrKb4Tu1lAKdZc"></script>
+    <script src="myJS.js"></script>
+
 </body>
 </html>
